Insert an Image of Practical-3

--- a/index.html
+++ b/index.html
@@ -22,6 +22,6 @@
       employers that it has become somewhat meaningless.
     </p>
     <h2><b>Output</b></h2>
-    <img src="" alt="">
+    <img src="./assets/Practical-3.png" alt="Image">
   </body>
 </html>
