Done some small editing

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Practical-3</title>
   </head>
   <body>
+    <h2 style="color: red;">Practical-3 : Live your first web-page on Git-Hub</h2>  
     <h1><b>Welcome to Full-Stack course</b></h1>
     <h2><b>About Course</b></h2>
     <p>
@@ -22,6 +23,7 @@
       employers that it has become somewhat meaningless.
     </p>
     <h2><b>Output</b></h2>
+    <center>Live Page on github</center>
     <img src="./assets/Practical-3.png" alt="Image">
   </body>
 </html>
