--- a/index.html
+++ b/index.html
@@ -1,29 +1,117 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Practical-3</title>
-  </head>
-  <body>
-    <h2 style="color: red;">Practical-3 : Live your first web-page on Git-Hub</h2>  
-    <h1><b>Welcome to Full-Stack course</b></h1>
-    <h2><b>About Course</b></h2>
-    <p>
-      A full-stack developer understands the entire software stack, from the GUI
-      front end to the database back end. However, not everyone agrees on the
-      level of mastery needed to earn the title.A full-stack developer is a jack
-      of all trades and a highly sought-after job candidate. The title implies a
-      breadth of knowledge that can be invaluable to short-staffed startups and
-      big companies managing complex apps alike.However, the term “full-stack
-      developer” is controversial among developers. Some disparage the idea that
-      anyone could be equally competent across an entire software stack, while
-      others believe that the term has been so overused by employees and
-      employers that it has become somewhat meaningless.
-    </p>
-    <h2><b>Output</b></h2>
-    <center>Live Page on github</center>
-    <img src="./assets/Practical-3.png" alt="Image">
-  </body>
+
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>index file</title>
+    <style>
+        table,th,td{
+            border: 1px solid black;
+            border-collapse: collapse;
+        }
+        th,td{
+            padding: 5px;
+        }
+    </style>
+</head>
+
+<body style="background-color:rgb(204, 221, 221)">
+
+    <h2>This is index file</h2>
+    <table>
+        
+            <tr>
+                <th>SNO.</th>
+                <th>Practicals Name</th>
+                <th>Practicals link</th>
+            </tr>
+    
+        <tr>
+            <td>1</td>
+            <td> Create a web page including HTML basic skeleton using offline HTML editor
+                and online sandbox Environment</td>
+            <td class="a">
+                <a href="Pages/Practical1.html">Practical-1</a>
+            </td>
+        </tr>
+
+        <tr>
+            <td>2</td>
+            <td>Create a web page showing a basic html structure using character entities
+                and span Tag.</td>
+            <td class="a">
+                <a href="Pages/Practical2.html">Practical-2</a>
+            </td>
+        </tr>
+
+        <tr>
+            <td>3</td>
+            <td>Live your First Web-page on github.</td>
+            <td class="a">
+                <a href="Pages/Practical3.html">Practical-3</a>
+            </td>
+        </tr>
+
+        <tr>
+            <td>4</td>
+            <td> Create a website having list of all pratical and their individual practical
+                Page Links</td>
+            <td class="a">
+                <a href="Pages/Practical4.html">Practical-4</a>
+            </td>
+        </tr>
+
+        <tr>
+            <td>5</td>
+            <td>Create a Web-page showing the use of Image-Map in the web application.</td>
+            <td class="a">
+                <a href="Pages/Practical5.html">Practical-5</a>
+            </td>
+        </tr>
+
+        <tr>
+            <td>6</td>
+            <td>Create following layout using css layout properties.</td>
+            <td class="a">
+                <a href="Pages/Practical6.html">Practical-6</a>            
+            </td>
+        </tr>
+
+        <tr>
+            <td>6</td>
+            <td>Create following layout using css layout properties.</td>
+            <td class="a">
+                <a href="Pages/Practical6.html">Practical-6</a>            
+            </td>
+        </tr>
+
+        <tr>
+            <td>6</td>
+            <td>Create following layout using css layout properties.</td>
+            <td class="a">
+                <a href="Pages/Practical6.html">Practical-6</a>            
+            </td>
+        </tr>
+
+        <tr>
+            <td>6</td>
+            <td>Create following layout using css layout properties.</td>
+            <td class="a">
+                <a href="Pages/Practical6.html">Practical-6</a>            
+            </td>
+        </tr>
+
+        <tr>
+            <td>6</td>
+            <td>Create following layout using css layout properties.</td>
+            <td class="a">
+                <a href="Pages/Practical6.html">Practical-6</a>            
+            </td>
+        </tr>
+
+    </table>
+</body>
+
 </html>
