--- a/index.html
+++ b/index.html
@@ -110,6 +110,28 @@
                 <a href="Pages/Practical6.html">Practical-6</a>            
             </td>
         </tr>
+        <tr>
+            <td>6</td>
+            <td>Create following layout using css layout properties.</td>
+            <td class="a">
+                <a href="Pages/Practical7.html">Practical-7</a>            
+            </td>
+        </tr>
+        <tr>
+            <td>6</td>
+            <td>Create following layout using css layout properties.</td>
+            <td class="a">
+                <a href="Pages/Practical8.html">Practical-8</a>            
+            </td>
+        </tr>
+        <tr>
+            <td>6</td>
+            <td>Create following layout using css layout properties.</td>
+            <td class="a">
+                <a href="Pages/Practical-9.html">Practical-9</a>            
+            </td>
+        </tr>
+
 
     </table>
 </body>
