--- a/Pages/Practical-9.html
+++ b/Pages/Practical-9.html
@@ -22,7 +22,7 @@
       <li><a href="#Team">Team</a></li>
       <li><a href="#Technologies">Technologies</a></li>
       <li><a href="#Contact">Contact</a></li>
-      <label for="chk" class="hide-btn"
+      <label for="chk" class="show-btn"
         ><i class="fa fa-times" aria-hidden="true"></i
       ></label>
     </ul>
