--- a/index.html
+++ b/index.html
@@ -131,6 +131,13 @@
                 <a href="Pages/Practical-9.html">Practical-9</a>            
             </td>
         </tr>
+        <tr>
+            <td>6</td>
+            <td>Create a Responsive Side-Bar Navigation Menu.</td>
+            <td class="a">
+                <a href="Pages/Practical-10.html">Practical-10</a>            
+            </td>
+        </tr>
 
 
     </table>
