--- a/index.html
+++ b/index.html
@@ -80,7 +80,23 @@
         </tr>
 
         <tr>
-            <td>6</td>
+            <td>7</td>
+            <td>Create following layout using css layout properties.</td>
+            <td class="a">
+                <a href="Pages/Practical6.html">Practical-6</a>            
+            </td>
+        </tr>
+
+        <tr>
+            <td>8</td>
+            <td>Create following layout using css layout properties.</td>
+            <td class="a">
+                <a href="Pages/Practical6.html">Practical-6</a>            
+            </td>
+        </tr>
+
+        <tr>
+            <td>9</td>
             <td>Create following layout using css layout properties.</td>
             <td class="a">
                 <a href="Pages/Practical6.html">Practical-6</a>            
@@ -94,24 +110,8 @@
                 <a href="Pages/Practical6.html">Practical-6</a>            
             </td>
         </tr>
-
         <tr>
-            <td>6</td>
-            <td>Create following layout using css layout properties.</td>
-            <td class="a">
-                <a href="Pages/Practical6.html">Practical-6</a>            
-            </td>
-        </tr>
-
-        <tr>
-            <td>6</td>
-            <td>Create following layout using css layout properties.</td>
-            <td class="a">
-                <a href="Pages/Practical6.html">Practical-6</a>            
-            </td>
-        </tr>
-        <tr>
-            <td>6</td>
+            <td>7</td>
             <td>Create following layout using css layout properties.</td>
             <td class="a">
                 <a href="Pages/Practical7.html">Practical-7</a>            
@@ -132,10 +132,17 @@
             </td>
         </tr>
         <tr>
-            <td>6</td>
+            <td>10</td>
             <td>Create a Responsive Side-Bar Navigation Menu.</td>
             <td class="a">
                 <a href="Pages/Practical-10.html">Practical-10</a>            
+            </td>
+        </tr>
+        <tr>
+            <td>11</td>
+            <td>Create a Responsive Footer Template..</td>
+            <td class="a">
+                <a href="Pages/Practical11.html">Practical-11</a>            
             </td>
         </tr>
 
