--- a/index.html
+++ b/index.html
@@ -120,6 +120,13 @@
                 <a href="Pages/Practical-12.html">Practical-12</a>            
             </td>
         </tr>
+        <tr>
+            <td>13</td>
+            <td>Create a Table that represent Live Practical Book Records .</td>
+            <td class="a">
+                <a href="Pages/Practical-13.html">Practical-13</a>            
+            </td>
+        </tr>
 
 
 
