--- a/index.html
+++ b/index.html
@@ -127,6 +127,13 @@
                 <a href="Pages/Practical-13.html">Practical-13</a>            
             </td>
         </tr>
+        <tr>
+            <td>14</td>
+            <td>Create a Counter Page using JavaScript as per the attached Templates.</td>
+            <td class="a">
+                <a href="Pages/Practical-14.html">Practical-14</a>            
+            </td>
+        </tr>
 
 
 
