--- a/index.html
+++ b/index.html
@@ -134,6 +134,15 @@
                 <a href="Pages/Practical-14.html">Practical-14</a>            
             </td>
         </tr>
+        <tr>
+            <td>15</td>
+            <td>Create an HTML Form and Validate it with JavaScript (Client-side Programming Language).
+            </td>
+            <td class="a">
+                <a href="Pages/Practical-15.html">Practical-15</a>            
+            </td>
+        </tr>
+
 
 
 
